syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_package = "com.hugosave.intern.project.proto";
option java_multiple_files = true;



message UserAssetAndBalanceDTO {
  double balance = 1;
  repeated UserAssetDTO user_assets = 2;
}

message UserAssetDTO {
  string asset_code = 2;
  int32 quantity = 3;
}
