syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_package = "com.hugosave.intern.project.proto";
option java_multiple_files = true;

message UserOnboard {
  string user_name = 1;
  string password = 2;
  string email = 3;
}

message UserOnboardDTO {
  string user_name = 1;
  string password = 2;
  string email = 3;
}

message UserAuthResponseDTO {
  string user_id = 1;
  string user_name = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message UserAuthBody {
  string user_name = 1;
  string refresh_token = 2;
}
